--- a/gb/14/7/11/n4197825.md
+++ b/gb/14/7/11/n4197825.md
@@ -1,8 +1,7 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>野夫：地主之殇——土改与毁家纪事</h2>
-
 <h6></h6>
 <hr>
 	<p>【大纪元2014年07月11日讯】<b>一</b></p>
@@ -27,7 +26,7 @@
 <p>祖父卜居于村外8里的山上，单家独户像一个隐士。他育有四子两女，家父乃其幼子。他似乎比其他农民多一点主意，知道刀耕火种的难以养家活口，便选择了贩盐来贴补家用。山村相去巴东县城大约三百多里，一路的高崖深谷没有半丈坦途。一般而言往返六天，完全要靠背驮。传说中如果不碰见红军和剪绋的，他可以三天走过来回。可想而知，对一个山民来说，要想增加点家业，需要付出多少艰难和血汗——即使今天，大抵仍然如此。</p>
 <p>没有勤劳和节俭，祖父肯定是难以致富的。他终于在中年之后薄有田宅——用岁岁年年的奔波慢慢买下了60余亩山地，修了一栋木屋，占地也就200平米左右。像他这样半农半商的人，在乡下就算是跑码头见过点世面的，自然比别人多一些谋生之道。地里只产玉米，吃不完的就拿来烤酒——他在家里开起了作坊——祖父的包谷醇酿开始装点着山民的偷生之乐。</p>
 <p><b>五</b></p>
-<p>1940年代大约是祖父从贫民到富农再到小<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%9C%B0%E4%B8%BB.md#1">地主</a>的身份转移完成之时。他像大多数家道中兴的布衣绅士一样，省吃俭用，事必躬亲，小心翼翼地珍惜着他那乱世荒年中的一点可怜的幸福。在这一时段，大伯二伯大姑小姑相继成家，三伯未婚早夭——那在乡下即是寻常小灾，不足为悲。为了解决少爷（家父）的读书问题，他第一次在村里创办了义学，延聘了新式教育的老师；并在1946年将我18岁的父亲送到县城就读简师，他希望他的幼子能够完成学业以彻底改变世代农耕的命运。</p>
+<p>1940年代大约是祖父从贫民到富农再到小地主的身份转移完成之时。他像大多数家道中兴的布衣绅士一样，省吃俭用，事必躬亲，小心翼翼地珍惜着他那乱世荒年中的一点可怜的幸福。在这一时段，大伯二伯大姑小姑相继成家，三伯未婚早夭——那在乡下即是寻常小灾，不足为悲。为了解决少爷（家父）的读书问题，他第一次在村里创办了义学，延聘了新式教育的老师；并在1946年将我18岁的父亲送到县城就读简师，他希望他的幼子能够完成学业以彻底改变世代农耕的命运。</p>
 <p>一个乡绅的诞生并非仅凭财富的积累，他需要对乡村建设有所捐奉，比如修桥补路，悯老恤幼；他还要参与乡村社会的公共生活。只有这样，他才开始体面而尊荣，才会让周边人群信服。祖父的一切善行和成就，将他推上了族长的位置——这一纯粹民间的虚衔，在宗法时代是稳定社会的磐石，因而也拥有一种形而上的象征性权力。他不仅可以在族内排忧解纷，连外姓人家兴讼起争，也往往来找他做中平息。人有善恶，事有是非，理有正偏，何况闾里之争无非家务，许多清官难断的锱铢相较，由他划断奖罚，必也有恩有怨。由此埋下他日的祸根，这几乎也是天下仗义直言者都要付出的代价。</p>
 <p>自古以来，政府都鼓励乡村自治；只要完丁纳粮，其他服务性事务则多让渡给基层社会去自立自理。在政府财力权力皆难企及的领域，基本由乡村贤长在掌控和维持。实在解决不了疑难重症，才交由政府裁决。这样官民之间减少了摩擦，社会各阶层也多了张力，正是古人无为而治的理想状态。</p>
 <p>由于祖父的声望，大伯被民国县府推上了保长之席——约等于今天的村委会主任——这几乎是几年之后这个国家最普遍的断头台。保甲制度是典型的中国特色，其推行初衷在于家家联保，互为人质，用以平寇和防止通贼。在维护乡村治安和代行国家职责方面，他们确曾发挥作用。在石板村那样人烟稀少的偏远山寨，一个保长究竟有何功过，我在今天已实在难以评说了。估计太过无趣无益，大伯才会想要把这鸟位传给他毕业回来的小弟。万幸的是我父亲可能读书长了见识，他坚决不干并要求祖父继续供他到州府恩施去深造。祖父也许在隐隐的传闻中开始预感到乱世浩劫的临近，他再次资助他最钟爱的么儿踏上了异乡求学之路——正是这一步，让我父亲逃向生天——这，难道就是命运。</p>
@@ -37,7 +36,7 @@
 <p>祖父有意回避了为儿子送别的伤感场面，他独自登上后山；那里的一片松竹掩映中，默踞着郑氏祖茔。这些从土地上隆起的坟墓，错落有致如一个私家花园。一些石竹、玉簪和旅人蕉静默地开放，三叶藤和打碗花的枝蔓像无数羸弱的手牵连着这些飘散的灵魂，似乎在山风中具有了一种环抱而立的力量。大小各异的碑石神情庄严如同一张面孔，发灰泛白，苔痕班驳，书法的刻迹漫漶一如沁水的经卷。一个家族的历史，全部的苦难和荣耀，都尽在这些泥土下埋没着，阅览着岁岁芳草的无情惨绿。</p>
 <p>祖父似乎在丈量他祖祖辈辈一寸一分积攒下的这点土地，迷濛朝雾中，他像一个失算的弈者面对一盘亘古未解的残局。烟岚弥漫在他六十多岁的老眼里，他看见了大群死亡的浮雕像一部露天的族谱，记载着他日渐淡忘的艰险岁月。一些墓阶上还存放着积年的清供——粗糙的包谷、敞气的酒以及风干的苹果。他此刻怎么也不会相信他竟会死无葬身之地，他的儿女已无能为他烛酒拜祭。</p>
 <p><b>七</b></p>
-<p>在那之前，大伯和二伯都已各有四个子女，大姑和小姑都相继嫁到了邻县的官店。每个家庭都仍然是农耕为生，过着基本自足的日子。祖父只雇了一个长工，是族房的一个孤儿，带有收养性质，那孩子也只十几岁。土地则分给了三个儿子，我父亲的那份，就由祖父母代耕着——一个<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%9C%B0%E4%B8%BB.md#1">地主</a>的全部家当就是这些了，但这，在当年的石板村，就算是唯一的首富。</p>
+<p>在那之前，大伯和二伯都已各有四个子女，大姑和小姑都相继嫁到了邻县的官店。每个家庭都仍然是农耕为生，过着基本自足的日子。祖父只雇了一个长工，是族房的一个孤儿，带有收养性质，那孩子也只十几岁。土地则分给了三个儿子，我父亲的那份，就由祖父母代耕着——一个地主的全部家当就是这些了，但这，在当年的石板村，就算是唯一的首富。</p>
 <p>祖母在她的么儿外出的当年，终于油尽灯枯。她的早逝使她备享尊荣，那场丧礼办得风光体面，成为那些山中后人至今还能铭心的最后一抹残红之忆。古人说：寿则多辱。祖母幸好没有熬到1951年，否则她将如何面对那在劫难逃的灭门之祸。</p>
 <p>父亲考上了恩施五峰山上的清江中学。次年，据说因为打群架而被开除。就在他晃荡在江边卵石滩上无所适从时，林彪的四野开进了州城。那时的***所到之处，马上成立革命干部大学，用延安和东北那套成熟的洗脑方法，赶紧为地方培养管理干部。走投无路的父亲需要一份口粮，马上成为了首批学员。很快就学会了斗地主分浮财和杀人玩枪的技术，于是便分往利川开始伟大的“清匪反霸”运动。那时的老家肯定不通邮路，他对革命也肯定还抱有许多幼稚的想法，他也许还侥幸地认为他的家庭刚刚脱贫，应该不在镇压之列。于是他充满激情的投身到伟大的洪流中去，在剿匪的战斗中双枪横行，杀人越货屡建功劳。很快入党，很快成为最年轻的区委书记。关于父亲，我将另文专述。</p>
 <p>49年和50年，父亲与祖父是否有过联系，是否彼此知道对方的消息，这是父亲一生的秘密，我现在已经永远无从得知了。父亲用沉默维护着他的尊严，也一定用隐忍埋藏着他的耻辱。我相信我这一代人的父辈，多是少言寡语之人。他们用一生的压抑来努力遗忘那些不堪回首的往事，以至暮年往往精神崩溃。</p>
@@ -50,7 +49,7 @@
 <p>土地问题是一个农耕民族致命的焦点。历代的皇权更替也多与此相关——均贫富，耕者有其田，这是多少人造反的口号，但从来没看见哪个起义的领袖真正与民同苦。皇朝换了血统，法统却依然袭旧，受苦的还是底层百姓。</p>
 <p>这个党闹红军时代，本质上还是流寇——打到哪吃到哪，只有地主家有吃的，所以抢地主无可厚非。到了陕北，有了自己的占领区，才有了相关的政策——既要搞统一战线抗日，就不能完全抗拒政府而私下斗地主；又要吸引穷人支持，就不能不给老百姓甜头。于是，当时出台的方法是强迫地主减租减息，再由农民向党纳粮。军队自己也去开荒经商包含种大烟来换取费用。那时，毛是承认所谓开明绅士的，也和大地主交朋友。</p>
 <p>抗战一胜利，共军迅速坐大，两党要抢天下，在野的一方缺粮饷，光靠减租减息是不敷日用的，于是紧急推出土地改革政策及一整套实施办法。具体来说就是每到一处，先划分阶级成分，依靠贫雇农，团结中农，孤立富农，消灭地主。把地富的土地房产牲畜农具和粮食全部瓜分了，还给农民新的土地证。这样一来的巨大好处是，党有了粮饷，兵源。老百姓怕政府军来又夺走所谓的胜利果实，便只好和党绑在一起跟当时的政府作对。这一招实在是高，所谓的中央军要维护社会秩序，自然不能也如此乱来，于是所到之处只有挨打了。</p>
-<p>按说地主的田产分就分呗，大变革时代，个人承担一定的损失也无话可说。大家都是国民。总应给条活路，不应拿了别人的东西，还要羞辱并夺人性命。当时老苏区很多干部也都这么想，在抗战时，许多地主都和八路军有千丝万缕的关系，甚至许多共党高干都是地主子女。但不这么做，贫雇农就有顾虑，毕竟拿人钱财内心不安。毛发现这个问题后，作了严重批评，并允许基层过火，说以后再纠偏都行。于是大规模的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%9C%9F%E6%94%B9.md#1">土改</a>开始了，家庭出身地主的干部靠边，无业游民发动起来，人性中的恶全部调动出来，各种人间惨剧纷纷登场。（后文再举例）以上内容读者可参看毛选第四卷及近年党史研究，可知笔者不诬。</p>
+<p>按说地主的田产分就分呗，大变革时代，个人承担一定的损失也无话可说。大家都是国民。总应给条活路，不应拿了别人的东西，还要羞辱并夺人性命。当时老苏区很多干部也都这么想，在抗战时，许多地主都和八路军有千丝万缕的关系，甚至许多共党高干都是地主子女。但不这么做，贫雇农就有顾虑，毕竟拿人钱财内心不安。毛发现这个问题后，作了严重批评，并允许基层过火，说以后再纠偏都行。于是大规模的土改开始了，家庭出身地主的干部靠边，无业游民发动起来，人性中的恶全部调动出来，各种人间惨剧纷纷登场。（后文再举例）以上内容读者可参看毛选第四卷及近年党史研究，可知笔者不诬。</p>
 <p><b>十</b></p>
 <p>改朝换代是中国士民皆爱关注的话题，因为绝大多数情况下，它意味着战争和屠杀，是看客的谈资和民间话本的底料。在历史的宏大叙事中，杀人就像是一串逗乐的插科打诨；用迅翁的话说，屠伯的残忍很容易化为大家轻松的一笑。老百姓津津乐道的是歼敌八百万或手起钢刀下的喀嚓一声，有谁肯去分享那些具体枭首者的疼痛。</p>
 <p>远古的禅让是中国书生的政治神话，后世基本不敢去想。宋太祖那样先穿黄袍再客气地劝退前朝老板的故事，史书上也难得多讲。枪杆子里出政权——这真是爱读《资治通鉴》的人悟透了的硬道理。但历代的鼎革，天下底定后仍要诛杀前朝的普通吏员者，实不多见。满人入主北京后，还知道征召起用晚明的遗老，对那些拒不奉诏的不合作主义者，也基本容其自生自灭而不赶尽杀绝。一个国家的血腥气太重，终非好事——这当是所谓人主皆知的事。</p>
@@ -58,7 +57,7 @@
 <p><b>十一</b></p>
 <p>恩施的易帜大抵是1949年底的事。那时国军溃退留下的多是空城，共军一路向南沿途丢几个干部就可以轻松解决乡村的“解放”问题。1950年的鄂西百姓，基本生活在一种无政府主义状态。虽然敏感的人察觉到山雨欲来，但普通平民依旧盼望着乱世的结束。多数人总不免认为，反正从前的政府并非善物，也许新政会带来好运罢。</p>
 <p>祖父在此新旧交替的一年里，或者有过一丝忐忑；当保长的大伯则肯定惴惴不安 ，他已不知向谁可以辞职，只好自己息影在家躬耕田亩。他们本身并无罪恶感，因为向未为恶。甚至还幻想自家还有子弟正在服务新政，应该不会贾祸吧。</p>
-<p>1951年恩施各县终于开始全面<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%9C%9F%E6%94%B9.md#1">土改</a>，临时组织的许多工作组分派四方。像石板村这样的穷乡僻野只派去了一个人，这位姓宋的干部来自北方的老苏区，熟稔一整套斗地主的诀窍。那时全村不过几十户，贫富强弱几乎可以一眼观尽。首先找出最穷的几个光棍汉，成立农民代表会。晓之以理，许之以利，这样方可使这些人不怕得罪乡亲。然后组织村民开会，评选各家成分。这地儿实在太穷了，几乎都是自耕农，连雇农都没有，只好把我祖父收养的那个族房孤儿划为雇农——这样我祖父就自然是地主了。大伯这会儿就是伪保长了——算国民党残渣余孽。</p>
+<p>1951年恩施各县终于开始全面土改，临时组织的许多工作组分派四方。像石板村这样的穷乡僻野只派去了一个人，这位姓宋的干部来自北方的老苏区，熟稔一整套斗地主的诀窍。那时全村不过几十户，贫富强弱几乎可以一眼观尽。首先找出最穷的几个光棍汉，成立农民代表会。晓之以理，许之以利，这样方可使这些人不怕得罪乡亲。然后组织村民开会，评选各家成分。这地儿实在太穷了，几乎都是自耕农，连雇农都没有，只好把我祖父收养的那个族房孤儿划为雇农——这样我祖父就自然是地主了。大伯这会儿就是伪保长了——算国民党残渣余孽。</p>
 <p>祖父也算是见过一点世面的人，他已经活过了一个花甲又几。虽然身历数朝，看惯朝花夕逝和人世的荣辱寿夭，但他多少还是相信无论怎样虎去狼来，一般不会伤及他这样一个与世无争的老农。至于身外之物嘛，拿去就拿去——楚人失斧，楚人得之——反正同村的也多是本家同族的子孙。他哪里知道最高指令是消灭地主——这就不仅是财产和阶级了，当然还包含生命。因为这么大一批被夺走财产的士绅的存在，就可能是新政的隐患。</p>
 <p><b>十二</b></p>
 <p>从历史来看，土家的先民原是渔猎为主的民族；长期被平原来的楚军攻击，才留下“过赶年”的奇怪民俗。因为生活在蛮荒之地，与兽同处，家家户户都备有几件火器。这种习俗被许多人误解为这儿的人尚武斗狠，其实不过是在危险世界中的自卫。</p>
@@ -118,45 +117,36 @@
 <p>文章来源：作者博客</p>
 <p>&nbsp;</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/10/6/11/n2934801.md#1">郭国汀：越南共产党暴政罪恶昭彰</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/10/6/14/n2937451.md#1">郭国汀：埃塞俄比亚共产党政权的罪孽</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/10/6/15/n2938780.md#1">郭国汀：阿富汗共产党暴政罪大恶极</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/10/6/17/n2940423.md#1">郭国汀：尼加拉瓜共产党政权的罪孽</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/10/6/11/n2934801.md#1">郭国汀：越南共产党暴政罪恶昭彰</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/10/6/14/n2937451.md#1">郭国汀：埃塞俄比亚共产党政权的罪孽</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/10/6/15/n2938780.md#1">郭国汀：阿富汗共产党暴政罪大恶极</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/10/6/17/n2940423.md#1">郭国汀：尼加拉瓜共产党政权的罪孽</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/22/n10077932.md#1" target="_blank">中国教育的失败源于破坏传统文化及灌输党文化</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/14/n11384505.md#1" target="_blank">欧洲名校毕业的一代骄子 难忘童年之痛</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/3/7/n11922778.md?dfh#1" target="_blank">了解法轮功：见证奇迹 解开生命奥秘</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/26/n10743859.md#1" target="_blank">古玉文：公私合营献产业 武百祥命陨红朝</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/5/13/n7893575.md#1" target="_blank">专家看万人游行：法轮功在世界舞台令人注目</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/28/n14024230.md#1">能让人起死回生的古代医术</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/29/n14025211.md#1">宏硕壮阔 最具帝王气象的唐太宗诗歌</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/4/n14009801.md#1">自由的海水：一路向南 遇见春天般温暖的香港</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/4/n14027952.md#1">感觉往生的亲人就在身边？ 专家：正常现象</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/29/n14025277.md#1">【未解之谜】新证据出炉？人类已获得UFO！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/6/n14029448.md#1">【全球新闻】要炸核电厂？ 俄乌再打口水战</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/6/n14029872.md#1">【新唐人快报】美法官令解密FBI搜查令信息</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/6/n14029449.md#1">【晚间新闻】武警少将被捕 谁是习身边最危险的人？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/4/n14028328.md#1">1776年7月4日 美国究竟发生了什么</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/5/n14028733.md#1">重庆多地洪灾 万州已15死 泄洪情况未明</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/5/n14028890.md#1">平权招生被废后 美企业军队去平权战争开始</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/5/n14028804.md#1">亲姊发文证实 CoCo李玟离世 享年48岁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/4/n14028318.md#1">甄珍失联近一年首露面 偕子现身友人生日聚会</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/5/n14028568.md#1">曾莞婷连煮泡面的汤都省 20岁就拥首间套房</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/4/n14027999.md#1">帮阿汤哥庆生 10分钟看完他为《不可能》跑27年</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/4/n14028151.md#1">蓝正龙露面新片首映 今证实：我与幼婷分开了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/16/n13998223.md#1">盐对心脏病不好？盐是能量载体 专家荐1种健康盐</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/4/n14027952.md#1">感觉往生的亲人就在身边？ 专家：正常现象</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/5/n14028656.md#1">美国梦不再是赚大钱 调查披露民意转向</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/19/n14018996.md#1">信用不良？10招快速改善你的信用评分</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/5/n14028828.md#1">吃鲑鱼得了解的事！附详细煎鱼技巧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/4/n14344260.md#1">《清明上河图》化身乐高模型 打破世界纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14341736.md#1">《千字文》——传世奇文，国学瑰宝</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14341684.md#1">贞观圣主（10）：指鸟为鸾 正诛佞人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/28/n14340380.md#1">人生如戏岂堪嗟 —— 评电影《进京城》</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/8/6/1/n2138665.md#1">善有善报，拖久了还付利息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346708.md#1">【思想领袖】美国必须在太空领域击败中共</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14347432.md#1">【马克时空】以哈战争一周年 开启领导先走模式</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/3/n14343384.md#1">【环球直击】中国股市低失去动力 港股大跌</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14346022.md#1">宁德时代停产 专家：中国锂电业进入淘汰赛</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346454.md#1">前政治局常委吴邦国病亡 “五不搞”曾引争议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346441.md#1">房价断崖式下跌 分析：大陆中产返贫或成定局</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14346019.md#1">投资3亿 刘德华新片《危机航线》或亏2亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345927.md#1">那英澳门开唱遇冷 “十一”说成“五一”惹议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345357.md#1">韩剧《冬季恋歌》电影版 明年秋天在日本上映</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346417.md#1">《派遣女医X》以电影版落幕 米仓凉子感性落泪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346747.md#1">《狮子吼》“十一”档上映 2人观影 票房79元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345615.md#1">如何去除家庭头号害虫——蟑螂？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14346990.md#1">越南餐厅推出“珍珠奶茶牛肉面” 是啥味道？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/28/n14145199.md#1">长者自救锻炼法 逆转骨质疏松</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346769.md#1">秋季宜多吃“白色”食物 按三阴交穴保健</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346351.md#1">想了解空服员吗？ 先看这个工作的优缺点比较</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/14/7/11/n4197825.htm">野夫：地主之殇——土改与毁家纪事</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/14/7/11/n4197825.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/14/7/11/n4197825.htm">野夫：地主之殇——土改与毁家纪事</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/14/7/11/n4197825.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
